    o xgx_stat_ci: 
        1. for ordinal response, fix bug where response categories with count of zero were dropped and not displayed
        2. for bins option, do a check to make sure the dataset can be divided into the specified number of bins using quantile.  if not (say beacuse one value is repeated many times), then throw an error that recommends the user set the breaks directly.
    o xgx_scale_y_percentchangelog10: improved breaks, to use xgx_breaks_log10
    o xgx_scale_x_percentchangelog10: improved breaks, to use xgx_breaks_log10
    o xgx_breaks_log10: fixed error when range was c(0,0) so it now just plots an empty graph instead of throwing an error

CHANGES IN VERSION 1.1.3
------------------------
    o xgx_conf_int: change df in xgx_conf_int from length(y) to length(y) - 1 for normal and lognormal distributions. 
    o xgx_conf_int: Add warnings when length of y is 1, and change confidence interval from NaN to (-Inf, Inf) for normal and (0, Inf) for lognormal distributions. 
    o xgx_conf_int: Add methods options for binomial and ordinal distributions. Change default method of ordinal to "goodman"
    o removed theoph.Rmd and sad_pkpd.Rmd from CRAN distribution (still available in GitHub) 

CHANGES IN VERSION 1.1.2
------------------------
    o change predictdf.polr so inputs match predictdf generic, to fix S3 method consistency warning

CHANGES IN VERSION 1.1.1
------------------------
    o fix bug in xgx_stat_smooth / predictdf.nls that caused an error when formula had only one parameter to fit
    o add predict.nls function to produce predictions and confidence intervals for nls objects, similar to predict.lm for lm objects

CHANGES IN VERSION 1.1.0
------------------------
    o xgx_stat_smooth() added to allow for nonlinear fitting + confidence intervals, including emax fitting, and ordinal response fitting
    o xgx_stat_ci() updated with binning by quantiles, and ordinal/multinomial confidence intervals